[project]
name = "rs-documentation"
version = "0.0.0" # see: https://github.com/mtkennerly/poetry-dynamic-versioning

[tool.poetry]
name = "rs-documentation"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
rs-server = {path = "docs/rs-server", develop = true}
rs-client-libraries = {path = "docs/rs-client-libraries", develop = true}
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.23"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.2"
mkdocs-spellcheck = "^1.1.0"
symspellpy = "^6.7.7"





